# telegramBot

./: .env  .gitignore  README.md  generate_session.py  main.py  pyproject.toml  requirements.txt  start.sh
config/: __init__.py  prompt.py  settings.py
old_scripts/: bot2.py  test.py  x_scraper.py
services/: bot_service.py  news_service.py  x_service.py
test/: event_registry.py
utils/: logger.py  logger_config.py  utils.py
