[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client==1.8.1",
    "eventregistry>=9.1",
    "openai==1.61.1",
    "python-telegram-bot==21.10",
    "requests==2.32.3",
    "smolagents==1.7.0",
    "telethon>=1.39.0",
]
